--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,6 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quos quaerat sapiente nam, id vero.</p>
     </section>
    </div>
+   <p>Testing GIT</p>
 </body>
 </html>
